# qtc-tabbededitor-plugin

./: .gitignore  CMakeLists.txt  README.md  TabbedEditor.json.in  tabbededitor.pro  tabbededitorplugin.cpp  tabbededitorplugin.h  tabsforeditorswidget.cpp  tabsforeditorswidget.h
resources/: res.qrc
resources/styles/: default.qss
